landscape mode , potrait mode, box mode style

--- a/application/views/frontend/meta.html
+++ b/application/views/frontend/meta.html
@@ -32,9 +32,22 @@
 					margin: 20px;
 					padding: 10px;
 					text-align: center;
-					width: 94%;
+					width: 75%;
 				}
-					
+				.w40{
+					width:40% !important;
+				}
+				.w93{
+					width:93% !important;
+				}
+				
+				.w100{
+					width:100% !important;
+				}
+				
+				.right{
+					float:right ;
+				}
 		</style>	
         <script src="<?=ASSETS_PATH?>web/js/apps/contentScript.js"></script>
 
