--- a/application/views/frontend/meta.html
+++ b/application/views/frontend/meta.html
@@ -22,7 +22,7 @@
 		<!-- ALL SCRIPT ON PAGE GOES HERE (HELPER,VIEW,SOMETHING,CSS) -->
 			<style>
 				.loadingContentBox{
-					width: 100%; display: inline-block; height: 300px;
+					width: 100%; display: inline-block; height: 300px; text-align: center;
 				}
 				
 				.loadingContentBoxLabel{
@@ -35,7 +35,13 @@
 					width: 75%;
 				}
 				.w40{
-					width:40% !important;
+					width:35% !important;
+				}
+				.h0{
+					height:0 !important;
+				}
+				.w25{
+					width:25% !important;
 				}
 				.w93{
 					width:93% !important;
@@ -44,7 +50,33 @@
 				.w100{
 					width:100% !important;
 				}
-				
+				.top43{
+					top:43% !important;
+				}
+				.left34{
+					left:34% !important;
+				}
+				.margin0{
+					margin:0 !important;
+				} 
+				.posFix{
+					position:fixed !important;
+				}
+				.posRel{
+					position:relative !important;
+				}
+				.zind1{
+						z-index:1 !important;
+				}
+				.topM90{
+						top:-88px !important;
+				}
+				.maxHeight100{
+						max-height:100% !important;
+				}
+				.maxWidth100{
+						max-width:100% !important;
+				}
 				.right{
 					float:right ;
 				}
