--- a/application/views/frontend/widgets/upload-box.html
+++ b/application/views/frontend/widgets/upload-box.html
@@ -5,8 +5,9 @@
 		<br />
 		<br />
 		<div class="imgCatCont2 left">
-			<span class="previewimages" ></span>
-			<a href="javascript:void(0)" class="openuploadvertion"><i class=" icon-camera-1  "></i><br />Upload Images</a>
+			<a href="javascript:void(0)" class="openuploadvertion top43 left34 margin0 posRel left zind1 h0"><i class=" icon-camera-1  "></i><br />Upload Images</a>
+			<span class="previewimages    " ></span>
+			
 			<input type="file" style="display:none" class="imagesvertion" name="images" />
 			<input type="hidden"  class="hasimages" value="" />
 		</div>
