--- a/application/views/frontend/meta.html
+++ b/application/views/frontend/meta.html
@@ -1,5 +1,20 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+<?php if( $this->load->controller()=='share' ): ?>
+<?php foreach($timeline as  $val) : ?> 
+<meta content="Ads Blocks" property="og:site_name">
+<meta content="<?=$val['caption']?>" property="og:title">
+<meta content="website" property="og:type">
+<meta content="<?=BASE_PATH."share/?g=layer&vsid=".$val['vsid']?>" property="og:url">
+<meta content="<?=$val['imagesdata']['image_full_path']?>" property="og:image">
+<meta content="en_US" property="og:locale">
+<meta content="<?=strip_tags($val['content'])?>" property="og:description"> 
+ 
+<?php endforeach; ?>         
+<?php endif; ?>
+
+
         <title>Ads - Blocks </title>
         <link href="<?=ASSETS_PATH?>web/css/style.css" rel="stylesheet" type="text/css" />
         <link href="<?=ASSETS_PATH?>web/css/fonts.css" rel="stylesheet" type="text/css" />
