--- a/application/views/frontend/navigation-left.html
+++ b/application/views/frontend/navigation-left.html
@@ -14,9 +14,9 @@
                     <div class="userName left">
                         <div class="imgUserName left"></div>
                         <div class="userProfileSet left">
-                        <a href="#"><?=$users['nickname']?> 
+                        <a href="<?=BASE_PATH?>profile"><?=$users['nickname']?> 
                         </a>
-						 <a href="settingprofile.html" class="settingProfile">Settings <i class="icon-cog-1"></i></a>
+						 <a href="<?=BASE_PATH?>setting" class="settingProfile">Settings <i class="icon-cog-1"></i></a>
                      </div>
                     </div>
  
@@ -40,7 +40,7 @@
 							  -->
                             <li class="clearfix">
  
-                                <div class="categoriesTitle left"><a href="myprofile.html">My Profile</a></div>
+                                <div class="categoriesTitle left"><a href="<?=BASE_PATH?>profile">My Profile</a></div>
                             </li>
 							
 							<!--
