--- a/application/views/frontend/post/detail.html
+++ b/application/views/frontend/post/detail.html
@@ -46,9 +46,9 @@
 									<a href="#"> <?=$val['category_name']?> </a>&nbsp; <?=$val['createddate']?></div>
 								<h1><?=$val['caption']?></h1>
 							   <?php if($val['creator']) :?>
-								<a href="#" class="author">by  <?=$val['creator']['fullname']?> </a>
+								<a href="<?=BASE_PATH.$val['creator']['layname']?>" class="author">by  <?=$val['creator']['fullname']?> </a>
 								<br/>
-								<a href="#" class="author">join date <?=$val['creator']['createddate']?>   </a>
+								<a href="javascript:void(0)" class="author">join date <?=$val['creator']['createddate']?>   </a>
 								<?php endif ; ?>
 								<div class="DesIntro">
 									<br />
@@ -72,7 +72,7 @@
 									<div class="listComment clearfix">
 										<div class="imgProfCom left"></div>
 										<div class="boxNameCom left">
-											<a href="#"><?=$comment['fullname']?></a>
+											<a href="<?=BASE_PATH.$comment['layname']?>"><?=$comment['fullname']?></a>
 											<h6>&nbsp;  <?=$comment['createddate']?></h6>
 											<p><?=$comment['comment']?></p>
 										</div>
@@ -109,7 +109,7 @@
 									<a href="#"> <?=$val['category_name']?> </a>&nbsp; <?=$val['createddate']?></div>
 								<h1><?=$val['caption']?></h1>
 							   <?php if($val['creator']) :?>
-								<a href="#" class="author">by  <?=$val['creator']['fullname']?> </a>
+								<a href="<?=BASE_PATH.$val['creator']['layname']?>" class="author">by  <?=$val['creator']['fullname']?> </a>
 								<br/>
 								<a href="#" class="author">join date <?=$val['creator']['createddate']?>   </a>
 								<?php endif ; ?>
@@ -138,7 +138,7 @@
 									<div class="listComment clearfix">
 										<div class="imgProfCom left"></div>
 										<div class="boxNameCom left">
-											<a href="#"><?=$comment['fullname']?></a>
+											<a href="<?=BASE_PATH.$comment['layname']?>"><?=$comment['fullname']?></a>
 											<h6>&nbsp;  <?=$comment['createddate']?></h6>
 											<p><?=$comment['comment']?></p>
 										</div>
