--- a/assets/web/css/style.css
+++ b/assets/web/css/style.css
@@ -145,36 +145,43 @@ html {
     width:100%;
     margin:0 auto;
 }
-.header {
+.header {  
   width:100%;
   height:32px;
-  background: #17a752  ;
+  background: -webkit-gradient(linear, left top, right top, from(#3197b6), to(#38b2c4));
+  background: -webkit-linear-gradient(top, #3197b6, #38b2c4);
+  background: -moz-linear-gradient(top, #3197b6, #38b2c4);
+  background: -o-linear-gradient(top, #3197b6, #38b2c4);
+  background: -ms-linear-gradient(top, #3197b6, #38b2c4);
+  background: linear-gradient(top, #3197b6, #38b2c4);
+  background-color: #3197b6;
+  /* text-shadow: 0px 0px 15px #000000; */
   position: fixed;
-  padding:5px;
+  padding:10px 5px;
     z-index: 99999;
 }
 .content {
 /*  width:100%;
 */}
-.contentLeft {
+.contentLeft {  
   width:20%;
   height:1000px;
   position:relative;
-  background: #09171b;
+  background: #000000;
   float:left;
     z-index: 9999;
-/*    display: none;*/
-/*    overflow: hidden;*/
+  /*    display: none;*/
+  /*    overflow: hidden;*/
 }
-.contentRight{
+.contentRight{  
   width:80%;
-/*  height: 70%;*/
-/*  background: red;*/
+  /*  height: 70%;*/
+  /*  background: red;*/
   float:left;
   overflow-y:scroll;  
-  margin-top:80px;
-/*    padding-left: 260px;*/
-/*    margin-left:260px;*/
+  margin-top:92px;
+  /*    padding-left: 260px;*/
+  /*    margin-left:260px;*/
 }
 .contentRightIn {
   height:auto;
@@ -199,12 +206,12 @@ html {
 .imgUserNameHelp {
     width:500px;
 }
-.imgUserName {
+.imgUserName {    
     width:40px;
     height:40px;
     background: #ccc;
     margin:2px 10px 0 0;
-    border-radius: 3px;
+    border-radius: 40px;
 }
 .userName {
     padding:0 0 10px 20px;
@@ -212,17 +219,17 @@ html {
 
 .userName a {
     text-decoration: none;
-    font: normal 14px 'OpenSansRegular', Arial, Helvetica, sans-serif;
+    font: normal 16px 'OpenSansSemibold', Arial, Helvetica, sans-serif;
     color:#fff;
     display: block;
     padding:4px 18px 5px 0;
     min-width:220px;
     position: relative;
-/*    background: red;*/
+    /*    background: red;*/
     z-index: 99;
 }
 .userName a:hover {
-    color:#40bfaa;
+    color:#2dc6cb;
 }
 .Help a {
     text-decoration: none;
@@ -263,11 +270,11 @@ html {
     margin-top:20px;
     padding:0 0px;
 }
-.categories h1 {
-    font: normal 11px 'OpenSansRegular', Arial, Helvetica, sans-serif;
-    color:#666;
+.categories h1 {    
+    font: normal 12px 'OpenSansBold', Arial, Helvetica, sans-serif;
+    color:#FFFFFF;
     text-transform: uppercase;
-    padding:0 0 0 20px;
+    padding:20px 0 0 20px;
     
 }
 .categories ul {
@@ -276,19 +283,19 @@ html {
 }
 .categories ul li {
     list-style-type: none;
-    padding:5px 20px;
+    padding:8px 20px;
     cursor: pointer;
-/*    border-bottom: solid 1px #202020 ;*/
+    /*    border-bottom: solid 1px #202020 ;*/
 }
 .categories ul li a:hover {
 /*    background: #3b3b3b ;   */
 }
 
-.categoriesTitle a.active ,.categoriesTitle a:hover {
-    color: #40bfaa;   
+.categoriesTitle a.active ,.categoriesTitle a:hover {    
+    color: #2dc6cb;   
 }
-.categoriesTitle a{
-    font: normal 13px 'OpenSansRegular', Arial, Helvetica, sans-serif;
+.categoriesTitle a{    
+    font: normal 13px 'OpenSansSemibold', Arial, Helvetica, sans-serif;
     color:#dee1e7;
     padding:3px 5px 0 15px;
     text-decoration: none;
@@ -330,7 +337,7 @@ html {
     content: "";
 }
 i.plusCategories {
-    margin-left:90px;
+    margin-left:40px !important;
     cursor: pointer;
 }
 i.plusCategories:hover {
@@ -341,9 +348,10 @@ i.plusCategories:hover {
     /*    height: 40px;*/
     background: #fff;
     position: fixed;
-    top:40px;
+    /* border-bottom:solid 1px #F7F7F7; */
+    top:51px;
     right: 0;
-/*    left: 260px;*/
+    /*    left: 260px;*/
     /*    padding:15px 20px;*/
     z-index: 9999;
     /*    display: none;*/
@@ -399,15 +407,15 @@ i.plusCategories:hover {
     color:#40bfaa;
 }
 .dropdownCollections {    
-    padding:15px 0px 15px 0px;
+    padding:15px 0px 15px 1px;
     background:#252525 ;
     /*    border-radius: 2px;*/
     position: absolute;
-    z-index: 99999   ;
+    z-index: 999990   ;
     width:80%;
     right:0px;
-    top:42px;
-/*    border-top:solid 1px #e0e0e0;*/
+    top:52px;
+    /*    border-top:solid 1px #e0e0e0;*/
 }   
 .barCat {    
     background: #fff;
@@ -465,42 +473,51 @@ i.plusCategories:hover {
     padding:10px;
     width:80%;
 }
-a.titleBlock {
-    background: rgba(9,147,219,0.5);
+a.titleBlock {    
+    
+    text-shadow: 0px 0px 0px #000000;
     position: absolute;
     bottom: 0px !important;
     position: relative;
     z-index: 9999;
-/*    padding-bottom: 10px !important;*/
+    max-width:95%;background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 1)));
+    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+    background: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+    background: -o-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+    background: -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+    background: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+    background-color: rgba(0, 0, 0, 0);
+    text-shadow: 0px 0px 0px #000000;
+    text-shadow: 0px 0px 0px #000000;
+    /*    padding-bottom: 10px !important;*/
 }
-/*
-a.titleBlock:hover {
-    color:#000 !important;
+a.titleBlock:hover {   
+   /* text-decoration: underline !important; */
 }
-*/
-.item {
+.item {    
     width:100%;
     height: 300px;
     background: #fff;
     float: left;
-/*    margin:20px 0 0 28px;*/
-/*    border-radius: 2px;*/
+    /*    margin:20px 0 0 28px;*/
+    /*    border-radius: 2px;*/
     overflow: hidden;
-/*    text-align: center;*/
+    /*    text-align: center;*/
     vertical-align: middle;
     position: relative;
-    background: #09171b;
+    background: #fff;
 }
-.item img {
-    width:60%;
+.item img {    
+    width:100%;
     height: auto;
     
 }
-.item a.CatTag {
+.item a.CatTag {    
     position: absolute;
     text-decoration: none;
-    font: normal 15px/24px 'OpenSansSemibold', Arial, Helvetica, sans-serif;
-    color:#40bfaa;
+    font: normal 12px/24px 'OpenSansBold', Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    color:#fff;
     width:220px;
     padding:20px 20px;
     text-align: left;
@@ -508,112 +525,117 @@ a.titleBlock:hover {
     max-height: 58px;
     overflow: hidden;
     border-radius: 0 3px 3px 0;
-/*    background: red !important;*/
+    text-shadow: 0px 0px 15px #000000;
+    /*    background: red !important;*/
 }
-.item a.aMainCon {
+.item a.aMainCon {    
     position: absolute;
     text-decoration: none;
-    font: normal 15px/24px 'OpenSansSemibold', Arial, Helvetica, sans-serif;
+    font: normal 18px/26px 'OpenSansSemibold', Arial, Helvetica, sans-serif;
     color:#fff;
-    width:56%;
-    padding:20px 20px;
+    width:50%;
+    padding:20px 500px 20px 20px;
     text-align: left;
     display: block;
-    max-height: 58px;
+    /* max-height: 58px; */
     overflow: hidden;
-/*    border-radius: 0 3px 3px 0;*/
+    /*    border-radius: 0 3px 3px 0;*/
     bottom:0px;
+    text-transform: uppercase;
     left:0;
-    background: rgba(23,167,82,0.5);
+    text-shadow: 0px 0px 15px #000000;
 }
-.item a:hover {
-    color:#40bfaa;
+.item a:hover {    
+     color:#ccc; 
+    /* text-decoration: underline; */
 }
 .item2 {
-    width:49%;
+    width:50%;
     height: 300px;
     background: #fff;
     float: left;
-/*    margin:20px 0 0 28px;*/
-/*    border-radius: 2px;*/
+    /*    margin:20px 0 0 28px;*/
+    /*    border-radius: 2px;*/
     overflow: hidden;
     text-align: center;
     vertical-align: middle;
     position: relative;
+    margin:0 !important;
     
 }
 .item2 img {
     width:120%;
     height: auto;
 }
-.item2 a.CatTag {
+.item2 a.CatTag {    
+    top:0;
+    font: normal 12px/24px 'OpenSansBold', Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    color:#fff;
+    text-decoration: none;
+    z-index: 9999;
+    text-shadow: 0px 0px 15px #000000;
+}
+.item2 a {    
     position: absolute;
     text-decoration: none;
-    font: normal 15px/24px 'OpenSansSemibold', Arial, Helvetica, sans-serif;
-    color:#40bfaa;
-    width:220px;
+    font: normal 14px/22px 'OpenSansBold', Arial, Helvetica, sans-serif;
+    color:#fff;
+    width:95%;
     padding:20px 20px;
     text-align: left;
     display: block;
-    max-height: 58px;
+    /* max-height: 58px; */
     overflow: hidden;
-    border-radius: 0 3px 3px 0;
-/*    background: red !important;*/
-    top:200px !important;
-    z-index: 99999;
-}
-.item2 a {
-    position: absolute;
-    text-decoration: none;
-    font: normal 15px/24px 'OpenSansSemibold', Arial, Helvetica, sans-serif;
-    color:#fff;
-    width:220px;
-    padding:200px 20px;
-    text-align: left;
-    display: block;
-    max-height: 58px;
-    overflow: hidden;
-/*    border-radius: 0 3px 3px 0;*/
+    /*    border-radius: 0 3px 3px 0;*/
     bottom:0px;
-    background:rgba(0,0,0,0.5);
+    text-transform: uppercase;
+    left:0;
+    text-shadow: 0px 0px 15px #000000;
+    /* text-shadow: 0px 0px 0px #000000; */
 }
-.item2 a:hover {
-    color:#40bfaa;
+.item2 .itemText a:hover {
+    /* text-decoration: underline; */
+    color: #ccc;
 }
 
-.item3 {
-    width:24%;
+.item3 {    
+    width:25%;
     height: 300px;
     background: #fff;
     float: left;
-/*    margin:20px 0 0 28px;*/
-/*    border-radius: 2px;*/
+    /*    margin:20px 0 0 28px;*/
+    /*    border-radius: 2px;*/
     overflow: hidden;
     text-align: center;
     vertical-align: middle;
     position: relative;
+    margin:0 !important;
 }
 .item3 img {
-    width:100%;
-    height: 100%;
+    width:220%;
+    height: auto;
 }
-.item3 a {
+.item3 a {    
     position: absolute;
     text-decoration: none;
-    font: normal 15px/24px 'OpenSansSemibold', Arial, Helvetica, sans-serif;
+    font: normal 14px/22px 'OpenSansSemibold', Arial, Helvetica, sans-serif;
     color:#fff;
     width:90%;
     padding:20px 20px;
     text-align: left;
     display: block;
-    max-height: 58px;
+    /* max-height: 58px; */
     overflow: hidden;
-/*    border-radius: 0 3px 3px 0;*/
-    bottom:20px;
-/*    background:rgba(23,167,82,0.5);*/
+    /*    border-radius: 0 3px 3px 0;*/
+    bottom:0px;
+    text-transform: uppercase;
+    left:0;
+    text-shadow: 0px 0px 15px #000000;
 }
 .item3 a:hover {
-    color:#40bfaa;
+    /* text-decoration: underline; */
+    color:#ccc;
 }
 .item4 {
     width:25%;
@@ -645,19 +667,20 @@ a.titleBlock:hover {
     bottom:20px;
 }
 .item4 a:hover {
-    color:#40bfaa;
+    text-decoration: underline;
 }
-.itemImg {
+.itemImg {    
     position: absolute;
     z-index: 99;
+    width:100%;
 }
 
-.itemText {
-/*    background: rgba( 0, 0, 0, 0.80);*/
+.itemText {    
+    /*    background: rgba( 0, 0, 0, 0.80);*/
     position: absolute;
     width:100%;
     height: 100%;
-    z-index: 999;
+    /* z-index: 99999; */
 }
 
 .itemText span i {
@@ -666,13 +689,17 @@ a.titleBlock:hover {
     cursor: pointer;
 }
 .itemText span i:hover {
-    color:#40bfaa; 
+    color:#2dc6cb; 
 }
-.itemText span {
+.itemText span {    
     right:20px;
-    position: relative;
+    position: absolute;
     top:20px;
-    z-index: 99999;
+    z-index: 9999999;
+    text-shadow: 0px 0px 15px #000000;
+}
+.itemText span i {
+color:#fff;
 }
 .buttonNav div {
     color: #fff;
@@ -706,11 +733,11 @@ a.titleBlock:hover {
     padding-left:2px;
 }
 .shareButton a:hover > span {
-    color:#40bfaa;
+    color:#2dc6cb;
     
 }
 .shareButton a:hover {
-    color: #40bfaa;
+    color: #2dc6cb;
 }
 .shareButton a i {
     padding-right: 5px;
@@ -733,18 +760,19 @@ a.titleBlock:hover {
     font: normal 11px 'OpenSansRegular', Arial, Helvetica, sans-serif;
     color:#999;
 }
-.tagCat a {
+.tagCat a {    
     text-decoration: none;
-    color:#40bfaa;
+    color:#2dc6cb;
 }
 .tagCat a:hover {
     text-decoration: underline;
 }
-.detailCatCont h1 {
+.detailCatCont h1 {    
     margin:0;
     padding:0 0 0px 0;
-    font: normal 28px 'OpenSansSemibold', Arial, Helvetica, sans-serif;
+    font: normal 28px 'OpenSansBold', Arial, Helvetica, sans-serif;
     color:#000;
+    /* text-transform: uppercase; */
 }
 a.author {
     text-decoration: none;
@@ -767,18 +795,20 @@ a.author:hover {
     width:80%;
     right:0;
 }
-a.totCom {
-    font: normal 14px 'OpenSansRegular', Arial, Helvetica, sans-serif;
-    color:#40bfaa;
+a.totCom {    
+    font: normal 12px 'OpenSansRegular', Arial, Helvetica, sans-serif;
+    color:#2dc6cb;
     text-decoration: none;
     display: block;
-    padding:20px 0;
+    padding:20px 20px 20px 0;
+    float:right;
 }
 a.totCom i {
     padding:0 10px 0 0;
 }
-a.totCom:hover {
-    text-decoration: underline;
+a.totCom:hover {    
+    /* text-decoration: underline; */
+    color:#ccc;
 }
 .imgProfCom {
     width:30px;
@@ -786,38 +816,40 @@ a.totCom:hover {
     background: #ccc;
     border-radius: 30px;
 }
-.listComment {
-    border-bottom: solid 1px #eee;
-    padding:20px 0 0 0;
+.listComment {    
+    /* border-bottom: solid 1px #eee; */
+    padding:0px 0 0px 0;
+    
 }
 .boxNameCom {
     width:80%;
     padding:0 20px;
 }
-.boxNameCom a {
-    color:#40bfaa;
+.boxNameCom a {    
+    color:#2dc6cb;
     text-decoration: none;
     font: normal 12px 'OpenSansRegular', Arial, Helvetica, sans-serif;
 }
 .boxNameCom a:hover {
-    text-decoration: underline;
+/*     text-decoration: underline; */
 }
 .boxNameCom p {
     font: normal 12px/20px 'OpenSansRegular', Arial, Helvetica, sans-serif;
     padding:0;
 }
-.boxNameCom h6 {
+.boxNameCom h6 {    
     margin:0;
     padding:0;
     display: inline-block;
     font: normal 10px 'OpenSansRegular', Arial, Helvetica, sans-serif;
-    color:#999;
+    color:#fff;
 }
-.addCom textarea {
+.addCom textarea {    
     outline: none;
     border:solid 1px #eee;
     background: #fff;
     padding:10px 20px;
+    margin-bottom: 40px;
     min-width: 80%;
     max-width:80%;
     font: normal 12px 'OpenSansRegular', Arial, Helvetica, sans-serif;
@@ -840,20 +872,20 @@ a.uploadButton:hover {
 a.plusNew {
     color:#40bfaa !important;
 }
-a.plusNewHome {
+a.plusNewHome {    
     text-decoration: none;
     padding:12px 20px 12px 15px;
     font: normal 12px 'OpenSansSemibold', Arial, Helvetica, sans-serif;
     color:#fff;
     display: block;
-/*    right:0px;*/
-/*    border-right:solid 1px #ccc;*/
+    /*    right:0px;*/
+    /*    border-right:solid 1px #ccc;*/
     position: relative;
-/*    border-radius: 3px;*/
+    /*    border-radius: 3px;*/
     text-transform: uppercase;
-    background: #d32c06 ;
+    background: #f06744 ;
     margin:0 0 0 -20px;
-/*    top:7px;*/
+    /*    top:7px;*/
 }
 a.plusNewHome i {
     color:#fff;
@@ -885,32 +917,39 @@ a.plusNewHome:hover {
     padding:0 3px;
     border-radius: 2px;
 }
-a.CatTag {
+a.CatTag {    
     top:0;
-    color:#40bfaa;
+    font: normal 12px/24px 'OpenSansBold', Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    color:#fff;
     text-decoration: none;
     z-index: 9999;
+    
 }
-.mainComment {
+.mainComment {    
     position: absolute;
     right: 0;
     width:38%;
-    top:30px;
+    padding:40px 0 20px 20px;
+    /* top:40px; */
+    z-index: 99999;
+    background: rgba(0,0,0,0.4);
 }
-p.pMainComm {
+p.pMainComm {    
     color:#fff !important;
 }
-.listCommentMain {
+.listCommentMain {    
     border:none !important;
+    height: 100px !important;
 }
-.boxUpload {
+.boxUpload {    
     width:100%;
-/*    height: 1000px;*/
-    background: #eee;
+    /*    height: 1000px;*/
+    background: #fff;
     position: absolute;
-    z-index: 9999;
-    margin-top:1px;
-    position:fixed;}
+    z-index: 99999999999;
+    margin-top:0px;
+}
 .boxUploadIn {
     width:80%;
     height: 100%;
@@ -1021,18 +1060,18 @@ textarea.descUpload {
         font: normal 14px 'OpenSansRegular', Arial, Helvetica, sans-serif;
     color:#FDF9F9;
 }
-a.bLogin {
+a.bLogin {    
     text-decoration: none;
             font: normal 16px 'OpenSansSemibold', Arial, Helvetica, sans-serif;
-    background: #d32c06 ;
+    background: #f06744 ;
     color:#fff;
     padding: 10px 20px;
     margin-top: 20px;
-/*    margin-left: 214px;*/
+    /*    margin-left: 214px;*/
     border-radius: 3px;
 }
 a.bLogin:hover {
-    background: #17a752 ;
+    background: #2dc6cb ;
 }
 .introLogin h1 {
     font: normal 34px 'OpenSansSemibold', Arial, Helvetica, sans-serif;
@@ -1250,4 +1289,9 @@ a.CatWP {
 .bigImageWPHL img {
     width:350px;
     height: auto;
+}
+.DesIntro {
+    color:#333;
+font: normal 16px/28px 'OpenSansRegular', Arial, Helvetica, sans-serif;
+    margin-bottom: 40px;
 }
