--- a/application/views/frontend/navigation-left.html
+++ b/application/views/frontend/navigation-left.html
@@ -12,7 +12,7 @@
 			 
                	<div class="userNameHelp clearfix">
                     <div class="userName left">
-                        <div class="imgUserName left"></div>
+                        <div class="imgUserName left"><img src="<?=$users['img']?>"  class="imgUserName" /></div>
                         <div class="userProfileSet left">
                         <a href="<?=BASE_PATH?>profile"><?=$users['nickname']?> 
                         </a>
