--- a/application/views/frontend/meta.html
+++ b/application/views/frontend/meta.html
@@ -70,8 +70,14 @@
 				.top43{
 					top:43% !important;
 				}
+				.top0{
+					top:0 !important;
+				}
 				.left34{
 					left:34% !important;
+				}
+				.left0{
+					left:0 !important;
 				}
 				.margin0{
 					margin:0 !important;
@@ -97,6 +103,7 @@
 				.right{
 					float:right ;
 				}
+				 
 		</style>	
         <script src="<?=ASSETS_PATH?>web/js/apps/contentScript.js"></script>
 
