--- a/application/views/frontend/setting/account.html
+++ b/application/views/frontend/setting/account.html
@@ -1,21 +1,6 @@
  
                 <div class="headerCategories">
-                    <div class="headerCatIn">
-                        <div class="categoriesAvatar2 left"></div>
-                        <div class="left">
-                            <div class="backtoCat">
-                                <a href="index.html">
-                                    <i class="icon-angle-left"></i>Back to Home</a>
-                            </div>
-                           </div>
-                        <div class="shareButton right">
-                            <a href="#">Profile</a>
-                            <a href="#">Account</a>
-                            <a href="#">Notifications
-                                <span class="">97</span>
-                            </a>
-                        </div>
-                    </div>
+                  		<?=$this->view('frontend/setting/setting-nav')?>
                     <div class="clearit"></div>
                 </div>
                 <!-- header categories : e -->
