--- a/application/views/frontend/setting/setting-nav.html
+++ b/application/views/frontend/setting/setting-nav.html
@@ -9,6 +9,7 @@
                         <div class="shareButton right">
                             <a href="<?=BASE_PATH?>setting/profile">Profile</a>
                             <a href="<?=BASE_PATH?>setting/account">Account</a>
+                            <a href="<?=BASE_PATH?>setting/community">Community</a>
                            <!--
 							<a href="#">Notifications
                                 <span class="">XX</span>
